# py-app

./: Makefile  README.md  pyproject.toml
src/py_app/: main.py
src/py_app/routers/: ping.py
tests/: test_foo.py
