[project]
name = "py-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "6ameDev", email = "sumitdas.usit@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=py_app.domain"
